--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,169 @@
----
----
+% journals
+@string{mit   = "The MIT Press, Cambridge, MA"}
+@string{auv = "IEEE/OES Autonomous Underwater Vehicles Symposium"}
+@string{cira = "IEEE Int. Sym. on Computational Intelligence on Robotics and Automation (CIRA)"}
+@string{ismar = "IEEE and ACM Intl. Sym. on Mixed and Augmented Reality (ISMAR)"}
+@string{iser  = "Intl. Sym. on Experimental Robotics (ISER)"}
+@string{ais = "Intl. Conf. on Autonomous and Intelligent Systems"}
+@string{ut = "Proc. of Int. Symp. of Underwater Technology"}
+@string{robio = "IEEE Intl. Conf. on Robotics and Biomimetics"}
+@string{icaps = "Proc. of Intl. Conf. on Automated Planning and Scheduling"}
+@string{ecmr = "European Conf. on Mobile Robotics (ECMR)"}
+@string{fusion = "Intl. Conf. on Information Fusion (FUSION)"}
+@string{siggraph = "SIGGRAPH"}
+@string{icpr  = "Intl. Conf. on Pattern Recognition (ICPR)"}
+@string{aaai  = "AAAI Conf. on Artificial Intelligence"}
+@string{ijcai = "Intl. Joint Conf. on Artificial Intelligence"}
+@string{accv  = "Asian Conf. on Computer Vision (ACCV)"}
+@string{cvpr  = "Proc. {IEEE} Int. Conf. Computer Vision and Pattern Recognition"}
+@string{uust  = "Proc. Int. Symp. on Unmanned Untethered Submersible Technology"
+}
+@string{oceans= "Proc. of the IEEE/MTS OCEANS Conf. and Exhibition"}
+% conferences
+@string{bmvc  = "British Machine Vision Conf. (BMVC)"}
+@string{eccv  = "Eur. Conf. on Computer Vision (ECCV)"}
+@string{iccv  = "Intl. Conf. on Computer Vision (ICCV)"}
+@string{emav  = "European Micro Aerial Vehicle Conference"}
+@string{icar  = "IEEE Intl. Conf. on Advanced Robotics (ICAR)"}
+@string{rss   = "Robotics: Science and Systems (RSS)"}
+@string{isrr  = "Proc. of the Intl. Symp. of Robotics Research (ISRR)"}
+@string{iros  = "IEEE/RSJ Intl. Conf. on Intelligent Robots and Systems (IROS)"}
+@string{icra  = "IEEE Intl. Conf. on Robotics and Automation (ICRA)"}
+@string{wafr  = "Intl. Workshop on the Algorithmic Foundations of Robotics (WAFR)"}
+@string{tip   = "{IEEE} Trans. on Image Processing"}
+@string{isr   = "Intelligent Service Robotics"}
+@string{mtsj  = "Marine Technology Society Journal"}
+@string{tac   = "{IEEE} Trans. on Automatic Control"}
+@string{pami  = "{IEEE} Trans. Pattern Anal. Machine Intell."}
+@string{ram   = "{IEEE} Robotics \& Automation Magazine"}
+@string{cviu  = "Computer Vision and Image Understanding"}
+@string{jbe   = "{ASME} Journal of Basic Engineering"}
+@string{ijcv  = "International Journal of Computer Vision"}
+@string{joe   = "Journal of Oceanic Engineering"}
+@string{ac    = "{IEEE} Trans. on Automatic Control"}
+@string{ieee  = "Proc. of the IEEE"}
+@string{ar    = "Autonomous Robots"}
+@string{fsr   = "Field and Service Robotics"}
+% workshops
+@string{jfr   = "J. of Field Robotics"}
+@string{ras   = "J. of Robotics and Autonomous Systems"}
+@string{tra   = "{IEEE} Trans. Robotics and Automation"}
+@string{tro   = "{IEEE} Transactions on Robotics"}
+% publishers
+@string{ijrr  = "International Journal of Robotics Research"}
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+
+@article{papalia2023certifiably,
+  abbr          = {preprint},
+  title         = {Certifiably Correct Range-Aided SLAM},
+  author        = {Papalia, Alan and Fishberg, Andrew and O'Neill, Brendan W. and How, Jonathan P. and Rosen, David M. and Leonard, John J.},
+  archiveprefix = {arXiv},
+  arxivid       = {2302.11614},
+  url           = {http://arxiv.org/abs/2302.11614},
+  journal       = {arXiv:2302.11614},
+  year          = {2023},
+  bibtex_show   = {true},
+  selected      = {true},
+  arxiv         = {2302.11614}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{papalia23icra,
+  abbr          = {ICRA},
+  title         = {SCORE: A Second-Order Conic Initialization for Range-Aided SLAM},
+  author        = {Papalia, Alan and Morales, Joseph and Doherty, Kevin J. and Rosen, David M. and Leonard, John J.},
+  booktitle     = icra,
+  archiveprefix = {arXiv},
+  arxivid       = {2210.03177},
+  url           = {http://arxiv.org/abs/2210.03177},
+  year          = {2023},
+  bibtex_show   = {true},
+  selected      = {true},
+  arxiv         = {2210.03177}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@inproceedings{papalia22icra,
+  abbr          = {ICRA},
+  title         = {Prioritized Planning for Cooperative Range-Only Localization in Multi-Robot Networks},
+  author        = {Papalia, Alan and Thumma, Nicole and Leonard, John},
+  booktitle     = icra,
+  pages         = {10753--10759},
+  year          = {2022},
+  organization  = {IEEE},
+  archiveprefix = {arXiv},
+  url           = {http://arxiv.org/abs/2109.05132},
+  arxivid       = {2109.05132},
+  arxiv         = {2109.05132},
+  bibtex_show   = {true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+@article{huang22ral,
+  abbr          = {RAL},
+  title         = {Nested Sampling for Non-Gaussian Inference in SLAM Factor Graphs},
+  author        = {Huang, Qiangqiang and Papalia, Alan and Leonard, John J.},
+  journal       = {IEEE Robotics and Automation Letters},
+  volume        = {7},
+  number        = {4},
+  pages         = {9232--9239},
+  year          = {2022},
+  publisher     = {IEEE},
+  archiveprefix = {arXiv},
+  url           = {http://arxiv.org/abs/2109.10871},
+  arxivid       = {2109.10871},
+  arxiv         = {2109.10871},
+  bibtex_show   = {true},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{oneill22oceans,
+  abbr         = {OCEANS},
+  title        = {Loosely-Coupled Human-Robot Teams for Enhanced Undersea Operations},
+  author       = {O'Neill, Brendan W. and Pelletier, Jesse R. and Calvert, Samuel and Papalia, Alan and Leonard, John J. and Freitag, Lee and Gallimore, Eric},
+  booktitle    = oceans,
+  year         = {2022},
+  organization = {IEEE},
+  bibtex_show  = {true},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{clark21health,
+  abbr       = {CHASE},
+  title     = {Inter-mobile-device distance estimation using network localization algorithms for digital contact logging applications},
+  author    = {Clark, Lillian and Papalia, Alan and Carvalho, J{\^o}nata Tyska and Mastrostefano, Luca and Krishnamachari, Bhaskar},
+  journal   = {Smart Health},
+  volume    = {19},
+  pages     = {100168},
+  year      = {2021},
+  publisher = {Elsevier},
+  archiveprefix = {arXiv},
+  arxivid     = {2007.10162},
+  url         = {http://arxiv.org/abs/2007.10162},
+  arxiv       = {2007.10162},
+  bibtex_show = {true},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{papalia20auv,
+  abbr         = {AUV},
+  title        = {Network Localization Based Planning for Autonomous Underwater Vehicles with Inter-Vehicle Ranging},
+  author       = {Papalia, Alan and Leonard, John},
+  booktitle    = auv,
+  year         = {2020},
+  organization = {IEEE},
+  archiveprefix = {arXiv},
+  arxivid     = {2010.02861},
+  url         = {http://arxiv.org/abs/2010.02861},
+  arxiv       = {2010.02861},
+  bibtex_show = {true},
 }
+
+@inproceedings{tieppo22oceans,
+  abbr         = {OCEANS},
+  title        = {Submarine Cables as Precursors of Persistent Systems for Large Scale Oceans Monitoring and Autonomous Underwater Vehicles Operation},
+  author       = {Tieppo, Marcos and Pereira, Eduardo and Garc{\'i}a, Laura Gonz{\'a}lez and Rolim, Margarida and Castanho, Emanuel and Matos, An{\'i}bal and Silva, Ant{\'o}nio and Ferreira, Bruno and Pascoal, Maria and Almeida, Eduardo and Costa, Filipe and Zabel, Fred and Faria, Jo{\~a}o and Azevedo, Jos{\'e} and Alves, Jos{\'e} and Moutinho, Jos{\'e} and Gon{\c{c}}alves, Lu{\'i}s and Martins, Marcos and Cruz, Nuno and Abreu, Nuno and Silva, Pedro and Viegas, R{\'u}ben and Jesus, S{\'e}rgio and Chen, T{\^a}nia and Miranda, Tiago and Papalia, Alan and Hart, Douglas and Leonard, John and Haji, Maha and de Weck, Olivier and Godart, Peter and Lermusiaux, Pierre},
+  booktitle    = oceans,
+  year         = {2022},
+  organization = {IEEE},
+  bibtex_show  = {true},
+}
+
+
+
