updated website with incoming faculty info

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -52,21 +52,51 @@
 % publishers
 @string{ijrr  = "International Journal of Robotics Research"}
 
+@article{papalia2024overview,
+  abbr={preprint},
+  title={An Overview of the Burer-Monteiro Method for Certifiable Robot Perception},
+  author={Papalia, Alan and Tian, Yulun and Rosen, David M. and How, Jonathan P. and Leonard, John J.},
+  journal={arXiv preprint arXiv:2410.00117},
+  year={2024},
+  archiveprefix = {arXiv},
+  arxivid       = {2410.00117},
+  arxiv         = {2410.00117},
+  url           = {http://arxiv.org/abs/2410.00117},
+  bibtex_show   = {true},
+  selected      = {true}
+}
 
+@article{doherty2024mac,
+  abbr={preprint},
+  title={MAC: Maximizing Algebraic Connectivity for Graph Sparsification},
+  author={Doherty, Kevin and Papalia, Alan and Huang, Yewei and Rosen, David and Englot, Brendan and Leonard, John},
+  journal={arXiv preprint arXiv:2403.19879},
+  year={2024},
+  archiveprefix = {arXiv},
+  arxivid       = {2403.19879},
+  arxiv         = {2403.19879},
+  url           = {http://arxiv.org/abs/2403.19879},
+  bibtex_show   = {true},
+}
 
-@article{papalia2023certifiably,
-  abbr          = {preprint},
-  title         = {Certifiably Correct Range-Aided SLAM},
-  author        = {Papalia, Alan and Fishberg, Andrew and O'Neill, Brendan W. and How, Jonathan P. and Rosen, David M. and Leonard, John J.},
+@article{papalia24cora,
+  abbr={TRO},
+  author={Papalia, Alan and Fishberg, Andrew and O'Neill, Brendan W. and How, Jonathan P. and Rosen, David M. and Leonard, John J.},
+  journal={IEEE Transactions on Robotics},
+  title={Certifiably Correct Range-Aided SLAM},
+  year={2024},
+  volume={40},
+  number={},
+  pages={4265-4283},
+  keywords={Simultaneous localization and mapping;Robots;Optimization;Certification;Sensors;Manifolds;Extraterrestrial measurements;Certifiable perception;range-aided simultaneous localization and mapping (RA-SLAM);Riemannian Staircase;semidefinite programming;ultrawideband (UWB)},
+  url           = {http://arxiv.org/abs/2302.11614},
+  arxiv         = {2302.11614},
   archiveprefix = {arXiv},
   arxivid       = {2302.11614},
-  url           = {http://arxiv.org/abs/2302.11614},
-  journal       = {arXiv:2302.11614},
-  year          = {2023},
   bibtex_show   = {true},
-  selected      = {true},
-  arxiv         = {2302.11614}
-}
+  selected      = {true}
+  }
+
 
 @inproceedings{papalia23icra,
   abbr          = {ICRA},
