--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,49 +53,51 @@
 @string{ijrr  = "International Journal of Robotics Research"}
 
 @article{papalia2024overview,
-  abbr={preprint},
-  title={An Overview of the Burer-Monteiro Method for Certifiable Robot Perception},
-  author={Papalia, Alan and Tian, Yulun and Rosen, David M. and How, Jonathan P. and Leonard, John J.},
-  journal={arXiv preprint arXiv:2410.00117},
-  year={2024},
+  abbr          = {preprint},
+  title         = {An Overview of the Burer-Monteiro Method for Certifiable Robot Perception},
+  author        = {Papalia, Alan and Tian, Yulun and Rosen, David M. and How, Jonathan P. and Leonard, John J.},
+  journal       = {arXiv preprint arXiv:2410.00117},
+  year          = {2024},
   archiveprefix = {arXiv},
   arxivid       = {2410.00117},
   arxiv         = {2410.00117},
   url           = {http://arxiv.org/abs/2410.00117},
   bibtex_show   = {true},
-  selected      = {true}
+  selected      = {true},
+  preview       = {BM-method.png}
 }
 
 @article{doherty2024mac,
-  abbr={preprint},
-  title={MAC: Maximizing Algebraic Connectivity for Graph Sparsification},
-  author={Doherty, Kevin and Papalia, Alan and Huang, Yewei and Rosen, David and Englot, Brendan and Leonard, John},
-  journal={arXiv preprint arXiv:2403.19879},
-  year={2024},
+  abbr          = {preprint},
+  title         = {MAC: Maximizing Algebraic Connectivity for Graph Sparsification},
+  author        = {Doherty, Kevin and Papalia, Alan and Huang, Yewei and Rosen, David and Englot, Brendan and Leonard, John},
+  journal       = {arXiv preprint arXiv:2403.19879},
+  year          = {2024},
   archiveprefix = {arXiv},
   arxivid       = {2403.19879},
   arxiv         = {2403.19879},
   url           = {http://arxiv.org/abs/2403.19879},
-  bibtex_show   = {true},
+  bibtex_show   = {true}
 }
 
 @article{papalia24cora,
-  abbr={TRO},
-  author={Papalia, Alan and Fishberg, Andrew and O'Neill, Brendan W. and How, Jonathan P. and Rosen, David M. and Leonard, John J.},
-  journal={IEEE Transactions on Robotics},
-  title={Certifiably Correct Range-Aided SLAM},
-  year={2024},
-  volume={40},
-  number={},
-  pages={4265-4283},
-  keywords={Simultaneous localization and mapping;Robots;Optimization;Certification;Sensors;Manifolds;Extraterrestrial measurements;Certifiable perception;range-aided simultaneous localization and mapping (RA-SLAM);Riemannian Staircase;semidefinite programming;ultrawideband (UWB)},
+  abbr          = {TRO},
+  author        = {Papalia, Alan and Fishberg, Andrew and O'Neill, Brendan W. and How, Jonathan P. and Rosen, David M. and Leonard, John J.},
+  journal       = {IEEE Transactions on Robotics},
+  title         = {Certifiably Correct Range-Aided SLAM},
+  year          = {2024},
+  volume        = {40},
+  number        = {},
+  pages         = {4265-4283},
+  keywords      = {Simultaneous localization and mapping;Robots;Optimization;Certification;Sensors;Manifolds;Extraterrestrial measurements;Certifiable perception;range-aided simultaneous localization and mapping (RA-SLAM);Riemannian Staircase;semidefinite programming;ultrawideband (UWB)},
   url           = {http://arxiv.org/abs/2302.11614},
   arxiv         = {2302.11614},
   archiveprefix = {arXiv},
   arxivid       = {2302.11614},
   bibtex_show   = {true},
-  selected      = {true}
-  }
+  selected      = {true},
+  preview       = {Outfinite-equipment.png}
+}
 
 
 @inproceedings{papalia23icra,
@@ -109,7 +111,8 @@
   year          = {2023},
   bibtex_show   = {true},
   selected      = {true},
-  arxiv         = {2210.03177}
+  arxiv         = {2210.03177},
+  preview       = {SCORE.png}
 }
 
 @inproceedings{papalia22icra,
@@ -142,7 +145,7 @@
   url           = {http://arxiv.org/abs/2109.10871},
   arxivid       = {2109.10871},
   arxiv         = {2109.10871},
-  bibtex_show   = {true},
+  bibtex_show   = {true}
 }
 
 @inproceedings{oneill22oceans,
@@ -152,37 +155,37 @@
   booktitle    = oceans,
   year         = {2022},
   organization = {IEEE},
-  bibtex_show  = {true},
+  bibtex_show  = {true}
 }
 
 @article{clark21health,
-  abbr       = {CHASE},
-  title     = {Inter-mobile-device distance estimation using network localization algorithms for digital contact logging applications},
-  author    = {Clark, Lillian and Papalia, Alan and Carvalho, J{\^o}nata Tyska and Mastrostefano, Luca and Krishnamachari, Bhaskar},
-  journal   = {Smart Health},
-  volume    = {19},
-  pages     = {100168},
-  year      = {2021},
-  publisher = {Elsevier},
+  abbr          = {CHASE},
+  title         = {Inter-mobile-device distance estimation using network localization algorithms for digital contact logging applications},
+  author        = {Clark, Lillian and Papalia, Alan and Carvalho, J{\^o}nata Tyska and Mastrostefano, Luca and Krishnamachari, Bhaskar},
+  journal       = {Smart Health},
+  volume        = {19},
+  pages         = {100168},
+  year          = {2021},
+  publisher     = {Elsevier},
   archiveprefix = {arXiv},
-  arxivid     = {2007.10162},
-  url         = {http://arxiv.org/abs/2007.10162},
-  arxiv       = {2007.10162},
-  bibtex_show = {true},
+  arxivid       = {2007.10162},
+  url           = {http://arxiv.org/abs/2007.10162},
+  arxiv         = {2007.10162},
+  bibtex_show   = {true}
 }
 
 @inproceedings{papalia20auv,
-  abbr         = {AUV},
-  title        = {Network Localization Based Planning for Autonomous Underwater Vehicles with Inter-Vehicle Ranging},
-  author       = {Papalia, Alan and Leonard, John},
-  booktitle    = auv,
-  year         = {2020},
-  organization = {IEEE},
+  abbr          = {AUV},
+  title         = {Network Localization Based Planning for Autonomous Underwater Vehicles with Inter-Vehicle Ranging},
+  author        = {Papalia, Alan and Leonard, John},
+  booktitle     = auv,
+  year          = {2020},
+  organization  = {IEEE},
   archiveprefix = {arXiv},
-  arxivid     = {2010.02861},
-  url         = {http://arxiv.org/abs/2010.02861},
-  arxiv       = {2010.02861},
-  bibtex_show = {true},
+  arxivid       = {2010.02861},
+  url           = {http://arxiv.org/abs/2010.02861},
+  arxiv         = {2010.02861},
+  bibtex_show   = {true}
 }
 
 @inproceedings{tieppo22oceans,
@@ -192,7 +195,7 @@
   booktitle    = oceans,
   year         = {2022},
   organization = {IEEE},
-  bibtex_show  = {true},
+  bibtex_show  = {true}
 }
 
 
